# demo_test_RAG_pipline

./: .env.example  .gitignore  AGENTS.md  README.md  app.py  pyproject.toml
data/fjordmat/: kampanjebrief-sommermeny-2025.md  kampanjerapport-juletilbud-2024.md  merkevareretningslinjer.md  motereferat-q1-2025.md
data/nordvik/: influencer-strategi.md  kampanjebrief-hostkolleksjon-2025.md  kampanjerapport-instagram-var-2025.md  merkevareretningslinjer.md
data/skytjenester/: kampanjebrief-lead-generering-q2-2025.md  kundecase-logistikkpartner.md  merkevareretningslinjer.md  seo-rapport-mars-2025.md
data/spareklar/: kampanjebrief-ny-sparefunksjon.md  kampanjerapport-google-ads-q4-2024.md  merkevareretningslinjer.md  sosiale-medier-strategi-2025.md
docs/: deterministic-indexing.md  metadata-audit.md  pipeline-baseline.md  pipeline-readability.md  retrieval-evaluation.md  retrieval-ranking-tuning.md
src/: llm.py  rag_pipeline.py
